--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "mint-ui": "^2.2.13",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-resource": "^1.5.1"
   }
 }
