添加图片组件 头部列表

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,6 @@
     ["component", [{
         "libraryName": "mint-ui",
         "style": true
-      }]]
+      }]], "transform-remove-strict-mode",
     ]
 }
