--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "node-sass": "^4.5.3",
+    "preview": "^0.1.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
+    "vue-preview": "^1.1.3",
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.8.1",
